created subjects and specific subject page with pdf viewer

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -16,6 +16,15 @@ body {
   background-color: #eee8f6;
 }
 
+/* Hide scrollbar but allow scrolling */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
+}
+.hide-scrollbar {
+  -ms-overflow-style: none; /* IE, Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
